# font-loader

./: .gitignore  .gitmodules  3q  CMakeLists.txt  README.md
include/: circular_progress.h  font_loader.h  image_proc.h  main_window.h  shader.h
shaders/: shader.fs  text.vs
src/: circular_progress.cpp  dfsa  font_loader.cpp  gui.cpp  image_proc.cpp  image_processing.cpp  main.cpp  main_window.cpp  main_window.h  splash_screen.ui  ui_main.cpp  ui_splash_screen.h  ui_typewriter.h  vertex_shader.glsl  window.cpp
ui/: gantry.py  main.py  main_window.h  new-new.ui  resources.qrc  resources_rc.py  splash_screen.ui  typewriter-new.ui  typewriter.ui  ui_new-new.h  ui_new-new.py  ui_newnew.py  ui_splash_screen.h  ui_splash_screen.py  ui_typewriter.py
ui/circular_progress/: circular_progress.py
